--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="menu-main-nav-arrow-line"></span>
                 </div>
             </li>
-            <li class="menu-main-nav-item">
+            <li class="menu-main-nav-item" id="menuEquipment">
                 <p class="menu-main-nav-text">Equipment</p>
 
                 <div class="menu-main-nav-arrow-container">
@@ -90,6 +90,72 @@
                             <span class="arrow-line"></span>
                         </div>
                         <p class="extention-text" id="womenClothing">Women</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="main-menu-extention-footwear-one" id="extentionFootwearOne">
+            <div class="clothing-nav">
+                <ul class="clothing-nav-content-wrapper">
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="shopByActivityFootwear">Shop by activity</p>
+                    </li>
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="menFootwear">Men</p>
+                    </li>
+                    <li class="clothing-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="womenFootwear">Women</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="main-menu-extention-equipment-one" id="extentionEquipmentOne">
+            <div class="clothing-nav">
+                <ul class="equipment-nav-content-wrapper">
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text" id="shopByActivityEquipment">Shop by activity</p>
+                    </li>
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text">Backpacks & Bags</p>
+                    </li>
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text">Ropes</p>
+                    </li>
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text">Climbing Equipment</p>
+                    </li>
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text">Avalanche Safety</p>
+                    </li>
+                    <li class="equipment-nav-item">
+                        <div class="arrow-container clothing-arrow-container">
+                            <span class="arrow-line"></span>
+                        </div>
+                        <p class="extention-text">Sleeping Bags</p>
                     </li>
                 </ul>
             </div>
@@ -367,6 +433,79 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="extention-two-nav-wrapper-clothing" id="extentionTwoNavEquipment">
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Hiking</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-equipment/hiking3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-equipment/hiking2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-equipment/hiking1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Skiing</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-equipment/skiing3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-equipment/skiing2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-equipment/skiing1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Climbing</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-equipment/climbing3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-equipment/climbing2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-equipment/climbing1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Mountaineering</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-equipment/mountain3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-equipment/mountain2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-equipment/mountain1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Urbaneering</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-equipment/urban3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-equipment/urban2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-equipment/urban1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            
         </section>
     </section>
         
