--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 </ul>
             </div>
         </section>
-        <section class="main-menu-extention-clothing-two" id="extentionClothingTwo">
-            <ul class="extention-two-nav-wrapper-clothing" id="extentionTwoNavShopByActivity">
+        <section class="main-menu-extention-two" id="extentionMenuTwo">
+            <ul class="extention-two-nav-wrapper" id="extentionClothingShopByActivity">
                 <li class="extention-two-nav-item">
                     <p class="extention-two-nav-item-text">Hiking</p>
                     <ul class="category-card-icon-wrapper">
@@ -233,7 +233,7 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="extention-two-nav-wrapper-clothing" id="extentionClothingMen">
+            <ul class="extention-two-nav-wrapper" id="extentionClothingMen">
                 <li class="extention-two-nav-item">
                     <p class="extention-two-nav-item-text">Discover All</p>
                     <ul class="category-card-icon-wrapper">
@@ -333,7 +333,7 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="extention-two-nav-wrapper-clothing" id="extentionClothingWomen">
+            <ul class="extention-two-nav-wrapper" id="extentionClothingWomen">
                 <li class="extention-two-nav-item">
                     <p class="extention-two-nav-item-text">Discover All</p>
                     <ul class="category-card-icon-wrapper">
@@ -433,7 +433,7 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="extention-two-nav-wrapper-clothing" id="extentionTwoNavEquipment">
+            <ul class="extention-two-nav-wrapper" id="extentionTwoNavEquipment">
                 <li class="extention-two-nav-item">
                     <p class="extention-two-nav-item-text">Hiking</p>
                     <ul class="category-card-icon-wrapper">
@@ -501,6 +501,182 @@
                         </li>
                         <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
                             <img src="/Mammut/slike-menu-equipment/urban1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="extention-two-nav-wrapper" id="extentionFootwearShopByActivity">
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Hiking</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/hiking3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/hiking2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/hiking1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Mountaineering</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/mountain3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/mountain2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/mountain1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Urbaneering</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/urban3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/urban2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/shopByActivity/urban1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="extention-two-nav-wrapper" id="extentionFootwearMen">
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Discover All</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/men/discoverall3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/men/discoverall2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/men/discoverall1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Winter Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/men/winter.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Hiking Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/men/hiking3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/men/hiking2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/men/hiking1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Mountaineering Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/men/mountain3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/men/mountain2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/men/mountain1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Casual Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/men/casual3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/men/casual2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/men/casual1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="extention-two-nav-wrapper" id="extentionFootwearWomen">
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Discover All</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/women/discoverall3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/women/discoverall2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/women/discoverall1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Winter Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/women/winter.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Hiking Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/women/hiking3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/women/hiking2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/women/hiking1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Mountaineering Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/men/womountain3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/men/womountain2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/women/mountain1.png" alt="" class="category-card-icon">
+                        </li>
+                    </ul>
+                </li>
+                <li class="extention-two-nav-item">
+                    <p class="extention-two-nav-item-text">Casual Shoes</p>
+                    <ul class="category-card-icon-wrapper">
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-third">
+                            <img src="/Mammut/slike-menu-footwear/women/casual3.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-second">
+                            <img src="/Mammut/slike-menu-footwear/women/casual2.png" alt="" class="category-card-icon">
+                        </li>
+                        <li class="category-card-icon-wrapper-item category-card-icon-wrapper-item-first">
+                            <img src="/Mammut/slike-menu-footwear/women/casual1.png" alt="" class="category-card-icon">
                         </li>
                     </ul>
                 </li>
