--- a/index.html
+++ b/index.html
@@ -802,10 +802,29 @@
     </div>
     <section class="card-container">
         <div class=" card cardl">
-            <div class="card-men"></div>
+            <div class="card-men-background"></div>
+            <div class="card-content-wrapper">
+                <p class="card-heading">Men</p>
+                <div class="card-text-wrapper">
+                    <p class="card-text">Shop Now</p>
+                    <div class="card-arrow-container">
+                       <span class="card-arrow-line"></span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="card cardr">
-            <div class="card-women"></div>
+            <div class="card-women-background"></div>
+            <div class="card-content-wrapper">
+                <p class="card-heading">Women</p>
+                <div class="card-text-wrapper">
+                    <p class="card-text">Shop Now</p>
+                    <div class="card-arrow-container">
+                       <span class="card-arrow-line"></span>
+                    </div>
+                </div>
+            </div>
+            </div>
         </div>
     </section>
     <div class="hero">
